# clifford-sim

./: .gitignore  README.md
clifford_sim/: .gitignore  Cargo.toml
clifford_sim/lib/: circuit.rs  gate.rs  graph.rs  graph_set.rs  graphd.rs  lib.rs  stab.rs  stab_na.rs  stabd.rs  stabm.rs  tensor.rs  tree.rs
haskell/: .gitignore  package.yaml
haskell/lib/Cliff/: Gate.hs  Random.hs  Tree.hs
haskell/lib/Cliff/Tree/: Pure.hs  Qubit.hs  Register.hs  State.hs
prototyping/: BinaryProb.hs  binary-prob.rs  clifford-gen.rs  dither.py  entropy_check.py
workspace/: Cargo.toml
workspace/output/: convergence_test.npz  entropy_test.npz  phase_transition.npz
workspace/src/: clifford_test.rs  convergence_test.rs  entropy_test.rs  mutual_information.rs  phase_transition.rs  state.rs
workspace/src/convergence_test/: 0-plot.py
workspace/src/entropy_test/: 0-plot-time.py
workspace/src/mutual_information/: 0-plot.py
workspace/src/phase_transition/: 0-plot.py  1-collapse.py
workspace/src/phase_transition/0/: critical-value-period.py  small-period.py
