[package]
name = "workspace"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

[dependencies]
# thiserror = "*"
# anyhow = "*"
clifford-sim = { path = "../clifford_sim", version = "*" }
itertools = "0.13.0"
ndarray = { version = "0.15.6", features = [ "default", "rayon",] }
num-complex = "0.4.6"
rand = "0.8.5"
rayon = "1.10.0"

[dependencies.whooie]
git = "https://gitlab.com/whooie/rust-lib.git"
version = "*"
features = [ "ndarray-utils",]

[lib]
path = "lib/lib.rs"
name = "lib"

[[bin]]
path = "src/entropy_test.rs"
name = "entropy_test"

[[bin]]
path = "src/convergence_test.rs"
name = "convergence_test"

[[bin]]
path = "src/phase_transition.rs"
name = "phase_transition"

[[bin]]
path = "src/mutual_information.rs"
name = "mutual_information"

[[bin]]
path = "src/clifford_test.rs"
name = "clifford_test"

[[bin]]
path = "src/state.rs"
name = "state"

[profile.release]
lto = true
panic = "abort"
